<resources>
    <string name="app_provider_description">Provider of pokemon to access data</string>
    <string name="app_provider_name">Provider of pokemon</string>
    <string name="common_create">Create</string>
    <string name="common_delete">Del</string>
    <string name="common_edit">Edit</string>
    <string name="dialog_delete_message">Are you sure you want to delete this item ?</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="menu_item_create">Add</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_save">Save</string>
    <string name="arenes_badge_dialog_title">Select badge</string>
    <string name="arenes_badge_invalid_field_error">Field Badge is invalid.</string>
    <string name="arenes_badge_label">Badge</string>
    <string name="arenes_empty_list">Arenes list is empty !</string>
    <string name="arenes_error_create">Arenes creation error…</string>
    <string name="arenes_error_edit">Arenes edition error…</string>
    <string name="arenes_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="arenes_nom_label">Nom</string>
    <string name="arenes_not_found">No Arenes found to display…</string>
    <string name="arenes_progress_load_message">Arenes is loading…</string>
    <string name="arenes_progress_load_relations_message">Arenes related entities are loading...</string>
    <string name="arenes_progress_load_relations_title">Arenes related entities loading</string>
    <string name="arenes_progress_load_title">Arenes Loading progress</string>
    <string name="arenes_progress_save_message">Arenes is saving to database…</string>
    <string name="arenes_progress_save_title">Arenes save progress</string>
    <string name="attaques_empty_list">Attaques list is empty !</string>
    <string name="attaques_error_create">Attaques creation error…</string>
    <string name="attaques_error_edit">Attaques edition error…</string>
    <string name="attaques_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="attaques_nom_label">Nom</string>
    <string name="attaques_not_found">No Attaques found to display…</string>
    <string name="attaques_precis_invalid_field_error">Field Precis is invalid.</string>
    <string name="attaques_precis_label">Precis</string>
    <string name="attaques_progress_load_message">Attaques is loading…</string>
    <string name="attaques_progress_load_relations_message">Attaques related entities are loading...</string>
    <string name="attaques_progress_load_relations_title">Attaques related entities loading</string>
    <string name="attaques_progress_load_title">Attaques Loading progress</string>
    <string name="attaques_progress_save_message">Attaques is saving to database…</string>
    <string name="attaques_progress_save_title">Attaques save progress</string>
    <string name="attaques_puissance_invalid_field_error">Field Puissance is invalid.</string>
    <string name="attaques_puissance_label">Puissance</string>
    <string name="attaques_type_dialog_title">Select type</string>
    <string name="attaques_type_label">Type</string>
    <string name="badges_empty_list">Badges list is empty !</string>
    <string name="badges_error_create">Badges creation error…</string>
    <string name="badges_error_edit">Badges edition error…</string>
    <string name="badges_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="badges_nom_label">Nom</string>
    <string name="badges_not_found">No Badges found to display…</string>
    <string name="badges_progress_load_message">Badges is loading…</string>
    <string name="badges_progress_load_title">Badges Loading progress</string>
    <string name="badges_progress_save_message">Badges is saving to database…</string>
    <string name="badges_progress_save_title">Badges save progress</string>
    <string name="common_network_error">Connection error</string>
    <string name="dresseurs_empty_list">Dresseurs list is empty !</string>
    <string name="dresseurs_error_create">Dresseurs creation error…</string>
    <string name="dresseurs_error_edit">Dresseurs edition error…</string>
    <string name="dresseurs_login_invalid_field_error">Field Login is invalid.</string>
    <string name="dresseurs_login_label">Login</string>
    <string name="dresseurs_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="dresseurs_nom_label">Nom</string>
    <string name="dresseurs_not_found">No Dresseurs found to display…</string>
    <string name="dresseurs_npc_dialog_title">Select npc</string>
    <string name="dresseurs_npc_invalid_field_error">Field Npc is invalid.</string>
    <string name="dresseurs_npc_label">Npc</string>
    <string name="dresseurs_password_invalid_field_error">Field Password is invalid.</string>
    <string name="dresseurs_password_label">Password</string>
    <string name="dresseurs_progress_load_message">Dresseurs is loading…</string>
    <string name="dresseurs_progress_load_relations_message">Dresseurs related entities are loading...</string>
    <string name="dresseurs_progress_load_relations_title">Dresseurs related entities loading</string>
    <string name="dresseurs_progress_load_title">Dresseurs Loading progress</string>
    <string name="dresseurs_progress_save_message">Dresseurs is saving to database…</string>
    <string name="dresseurs_progress_save_title">Dresseurs save progress</string>
    <string name="image_error_null">Image is null</string>
    <string name="no_network_error">No internet connection available</string>
    <string name="npcs_badge_dialog_title">Select badge</string>
    <string name="npcs_badge_label">Badge</string>
    <string name="npcs_empty_list">Npcs list is empty !</string>
    <string name="npcs_error_create">Npcs creation error…</string>
    <string name="npcs_error_edit">Npcs edition error…</string>
    <string name="npcs_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="npcs_nom_label">Nom</string>
    <string name="npcs_not_found">No Npcs found to display…</string>
    <string name="npcs_objet_dialog_title">Select objet</string>
    <string name="npcs_objet_label">Objet</string>
    <string name="npcs_pokemon_dialog_title">Select pokemon</string>
    <string name="npcs_pokemon_label">Pokemon</string>
    <string name="npcs_profession_invalid_field_error">Field Profession is invalid.</string>
    <string name="npcs_profession_label">Profession</string>
    <string name="npcs_progress_load_message">Npcs is loading…</string>
    <string name="npcs_progress_load_relations_message">Npcs related entities are loading...</string>
    <string name="npcs_progress_load_relations_title">Npcs related entities loading</string>
    <string name="npcs_progress_load_title">Npcs Loading progress</string>
    <string name="npcs_progress_save_message">Npcs is saving to database…</string>
    <string name="npcs_progress_save_title">Npcs save progress</string>
    <string name="npcs_texte_invalid_field_error">Field Texte is invalid.</string>
    <string name="npcs_texte_label">Texte</string>
    <string name="objets_empty_list">Objets list is empty !</string>
    <string name="objets_error_create">Objets creation error…</string>
    <string name="objets_error_edit">Objets edition error…</string>
    <string name="objets_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="objets_nom_label">Nom</string>
    <string name="objets_not_found">No Objets found to display…</string>
    <string name="objets_objet_dialog_title">Select objet</string>
    <string name="objets_objet_label">Objet</string>
    <string name="objets_progress_load_message">Objets is loading…</string>
    <string name="objets_progress_load_relations_message">Objets related entities are loading...</string>
    <string name="objets_progress_load_relations_title">Objets related entities loading</string>
    <string name="objets_progress_load_title">Objets Loading progress</string>
    <string name="objets_progress_save_message">Objets is saving to database…</string>
    <string name="objets_progress_save_title">Objets save progress</string>
    <string name="objets_quantite_invalid_field_error">Field Quantite is invalid.</string>
    <string name="objets_quantite_label">Quantite</string>
    <string name="pokedexs_empty_list">Pokedexs list is empty !</string>
    <string name="pokedexs_error_create">Pokedexs creation error…</string>
    <string name="pokedexs_error_edit">Pokedexs edition error…</string>
    <string name="pokedexs_not_found">No Pokedexs found to display…</string>
    <string name="pokedexs_progress_load_message">Pokedexs is loading…</string>
    <string name="pokedexs_progress_load_title">Pokedexs Loading progress</string>
    <string name="pokedexs_progress_save_message">Pokedexs is saving to database…</string>
    <string name="pokedexs_progress_save_title">Pokedexs save progress</string>
    <string name="pokemons_attaque1_dialog_title">Select attaque1</string>
    <string name="pokemons_attaque1_invalid_field_error">Field Attaque1 is invalid.</string>
    <string name="pokemons_attaque1_label">Attaque1</string>
    <string name="pokemons_attaque2_dialog_title">Select attaque2</string>
    <string name="pokemons_attaque2_label">Attaque2</string>
    <string name="pokemons_attaque3_dialog_title">Select attaque3</string>
    <string name="pokemons_attaque3_label">Attaque3</string>
    <string name="pokemons_attaque4_dialog_title">Select attaque4</string>
    <string name="pokemons_attaque4_label">Attaque4</string>
    <string name="pokemons_capture_date_title">Select capture date</string>
    <string name="pokemons_capture_invalid_field_error">Field Capture is invalid.</string>
    <string name="pokemons_capture_label">Capture</string>
    <string name="pokemons_capture_time_title">Select capture time</string>
    <string name="pokemons_empty_list">Pokemons list is empty !</string>
    <string name="pokemons_error_create">Pokemons creation error…</string>
    <string name="pokemons_error_edit">Pokemons edition error…</string>
    <string name="pokemons_niveau_invalid_field_error">Field Niveau is invalid.</string>
    <string name="pokemons_niveau_label">Niveau</string>
    <string name="pokemons_not_found">No Pokemons found to display…</string>
    <string name="pokemons_progress_load_message">Pokemons is loading…</string>
    <string name="pokemons_progress_load_relations_message">Pokemons related entities are loading...</string>
    <string name="pokemons_progress_load_relations_title">Pokemons related entities loading</string>
    <string name="pokemons_progress_load_title">Pokemons Loading progress</string>
    <string name="pokemons_progress_save_message">Pokemons is saving to database…</string>
    <string name="pokemons_progress_save_title">Pokemons save progress</string>
    <string name="pokemons_surnom_invalid_field_error">Field Surnom is invalid.</string>
    <string name="pokemons_surnom_label">Surnom</string>
    <string name="pokemons_typepokemon_dialog_title">Select typePokemon</string>
    <string name="pokemons_typepokemon_invalid_field_error">Field TypePokemon is invalid.</string>
    <string name="pokemons_typepokemon_label">TypePokemon</string>
    <string name="positions_empty_list">Positions list is empty !</string>
    <string name="positions_error_create">Positions creation error…</string>
    <string name="positions_error_edit">Positions edition error…</string>
    <string name="positions_not_found">No Positions found to display…</string>
    <string name="positions_progress_load_message">Positions is loading…</string>
    <string name="positions_progress_load_title">Positions Loading progress</string>
    <string name="positions_progress_save_message">Positions is saving to database…</string>
    <string name="positions_progress_save_title">Positions save progress</string>
</resources>