<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:harmony="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/dresseurs_nom_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dresseurs_nom_label"/>
    <EditText
        android:id="@+id/dresseurs_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/dresseurs_nom_label" />
    <TextView
        android:id="@+id/dresseurs_login_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dresseurs_nom"
        android:text="@string/dresseurs_login_label"/>
    <EditText
        android:id="@+id/dresseurs_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/dresseurs_login_label" />
    <TextView
        android:id="@+id/dresseurs_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dresseurs_login"
        android:text="@string/dresseurs_password_label"/>
    <EditText
        android:id="@+id/dresseurs_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/dresseurs_password_label" />
    <TextView
        android:id="@+id/dresseurs_npc_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dresseurs_password"
        android:text="@string/dresseurs_npc_label"/>
    <com.kevinguegancamillepaviot.pokemon.harmony.widget.MultiEntityWidget
        android:id="@+id/dresseurs_npc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dresseurs_npc_label" />
</RelativeLayout>
